# 3DRetrieval_ShadowDrawGUI

./: Blending.cpp  Blending.h  CMakeLists.txt  EdgeDetector.cpp  EdgeDetector.h  MainWindow.cpp  MainWindow.h  README.md  ResourceManager.cpp  ResourceManager.h  ScribbleArea.cpp  ScribbleArea.h  Similarity.cpp  Similarity.h  main.cpp
